[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/StatBox.png" type="Texture" id=1]
[ext_resource path="res://scenes/userInerface/PlayerStats.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="PlayerStats" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -125.0
margin_right = 225.0
margin_bottom = 125.0
rect_min_size = Vector2( 225, 189 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="background" type="NinePatchRect" parent="PlayerStats"]
anchor_left = 0.102
anchor_top = 0.152
anchor_right = 1.133
anchor_bottom = 0.76
margin_left = -23.95
margin_top = -56.0
margin_right = 24.075
margin_bottom = 91.0
rect_scale = Vector2( 1.00325, 1.01591 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerStats"]
anchor_left = 0.102
anchor_top = 0.184
anchor_right = 1.133
anchor_bottom = 0.76
margin_left = 0.0499992
margin_top = -8.0
margin_right = 0.0749969
margin_bottom = -1.52588e-05
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStats/HBoxContainer"]
margin_left = 26.0
margin_right = 206.0
margin_bottom = 152.0

[node name="Control" type="Control" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 5.0
rect_min_size = Vector2( 180, 5 )

[node name="Label" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 180.0
margin_bottom = 23.0
text = "Stats"
align = 1
valign = 1

[node name="Strength" type="HBoxContainer" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 180.0
margin_bottom = 47.0

[node name="Name" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Strength"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "Strength"

[node name="Value" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Strength"]
margin_left = 57.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "5"
align = 2
valign = 1

[node name="Button" type="Button" parent="PlayerStats/HBoxContainer/VBoxContainer/Strength"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Wisdom" type="HBoxContainer" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 180.0
margin_bottom = 71.0

[node name="Name" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Wisdom"]
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "Wisdom"

[node name="Value" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Wisdom"]
margin_left = 57.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "5"
align = 2
valign = 1

[node name="Button2" type="Button" parent="PlayerStats/HBoxContainer/VBoxContainer/Wisdom"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Dexterity" type="HBoxContainer" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 180.0
margin_bottom = 95.0

[node name="Name" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Dexterity"]
margin_top = 3.0
margin_right = 59.0
margin_bottom = 17.0
text = "Dexterity"

[node name="Value" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Dexterity"]
margin_left = 63.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "5"
align = 2
valign = 1

[node name="Button3" type="Button" parent="PlayerStats/HBoxContainer/VBoxContainer/Dexterity"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Luck" type="HBoxContainer" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 180.0
margin_bottom = 119.0

[node name="Name" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Luck"]
margin_top = 3.0
margin_right = 29.0
margin_bottom = 17.0
text = "Luck"

[node name="Value" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/Luck"]
margin_left = 33.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "5"
align = 2
valign = 1

[node name="Button4" type="Button" parent="PlayerStats/HBoxContainer/VBoxContainer/Luck"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="StatPoints" type="HBoxContainer" parent="PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 180.0
margin_bottom = 138.0

[node name="ColorRect" type="ColorRect" parent="PlayerStats/HBoxContainer/VBoxContainer/StatPoints"]
margin_right = 180.0
margin_bottom = 15.0
rect_min_size = Vector2( 180, 15 )
color = Color( 1, 0, 0, 1 )

[node name="Name" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/StatPoints/ColorRect"]
margin_top = 2.0
margin_bottom = 20.0
text = "Stat Points"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Value" type="Label" parent="PlayerStats/HBoxContainer/VBoxContainer/StatPoints/ColorRect"]
margin_top = 2.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "5"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="gui_input" from="PlayerStats" to="PlayerStats" method="_on_PlayerStats_gui_input"]
[connection signal="pressed" from="PlayerStats/HBoxContainer/VBoxContainer/Strength/Button" to="PlayerStats" method="_on_Button_pressed"]
[connection signal="pressed" from="PlayerStats/HBoxContainer/VBoxContainer/Wisdom/Button2" to="PlayerStats" method="_on_Button2_pressed"]
[connection signal="pressed" from="PlayerStats/HBoxContainer/VBoxContainer/Dexterity/Button3" to="PlayerStats" method="_on_Button3_pressed"]
[connection signal="pressed" from="PlayerStats/HBoxContainer/VBoxContainer/Luck/Button4" to="PlayerStats" method="_on_Button4_pressed"]
